--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="logo192.png" />
   
-    <title>React App</title>
+    <title>Space Clicky Game</title>
   </head>
   <body>
     <div id="root"></div>
